# UAkron-Simple-Calculator

./: BinaryExpr.hpp  CMakeLists.txt  Digit.hpp  EvalVisitor.cpp  EvalVisitor.hpp  Expr.hpp  ModExpr.cpp  MultiExpr.hpp  SubExpr.hpp  TestMain.cpp  Visitor.hpp  multi_eval.sh
AST/Expr/: BinaryExpr.cpp  BinaryExpr.hpp  Digits.cpp  Digits.hpp  DivExpr.hpp  MultiExpr.hpp  SubExpr.hpp
Eval/: EvalVisitor.cpp  EvalVisitor.hpp  Main.cpp
Eval/lib/: EvalVisitor.cpp  EvalVisitor.hpp
Expr/: AddExpr.hpp  Digit.cpp  DivExpr.hpp  Expr.hpp  ModExpr.hpp  SubExpr.cpp
Homework 1/: README.md  eval.md
Homework 1/AST/: AST.hpp
Homework 1/AST/Expr/: AddExpr.cpp  DivExpr.cpp  Expr.hpp
Homework 1/Eval/: Main.cpp
Homework 1/Parser/: Parser.cpp  Parser.ipp
Homework 1/Postfix/lib/: PostfixVisitor.cpp  PostfixVisitor.hpp
Homework 1/SExpr/: Main.cpp
Homework 1/SExpr/lib/: SExprVisitor.hpp
Homework 1/Test/: EvalTest.cpp  Main.cpp  PostfixTest.cpp  PostfixTest.hpp  SExprTest.hpp  TestCore.cpp
Homework 2/: CMakeLists.txt  README.md  Visitor.hpp  default_test.sh  multi_eval.sh  run_test.sh
Homework 2/AST/: AST.hpp  Expr.hpp  Expr.ipp  Type.hpp  Type.ipp
Homework 2/AST/Expr/: AST.hpp  AddExpr.hpp  AndExpr.hpp  EqualsExpr.cpp  EqualsExpr.hpp  Expr.cpp  Expr.hpp  GreaterThanEqualExpr.cpp  GreaterThanEqualExpr.hpp  GreaterThanExpr.cpp  GreaterThanExpr.hpp  LessThanEqualExpr.cpp  LessThanEqualExpr.hpp  LessThanExpr.cpp  LessThanExpr.hpp  ModExpr.hpp  MultiExpr.cpp  NegExpr.cpp  NegExpr.hpp  NegationExpr.cpp  NegationExpr.hpp  NotEqualsExpr.cpp  NotEqualsExpr.hpp  OrExpr.cpp  OrExpr.hpp  PosExpr.cpp  PosExpr.hpp  UnaryExpr.cpp  UnaryExpr.hpp
Homework 2/AST/Type/: BoolType.hpp  BoolType.ipp  IntType.cpp  IntType.hpp  IntType.ipp  Type.cpp  Type.hpp
Homework 2/Eval/: Main.cpp
Homework 2/Eval/lib/: EvalVisitor.cpp  EvalVisitor.hpp  EvalVisitor.ipp
Homework 2/Lexer/: Lexer.cpp  Lexer.hpp  Lexer.ipp  SymbolTable.cpp  SymbolTable.hpp  SymbolTable.ipp  Token.hpp  Token.ipp
Homework 2/Lexing/: Lexer.hpp  Token.hpp
Homework 2/Parser/: Parser.cpp  Parser.hpp  Parser.ipp
Homework 2/Test/: default.expect.txt  default.txt
Homework 2/TypeChecker/: TypeChecker.cpp  TypeChecker.hpp  TypeChecker.ipp
Homework 3/: Test.c  strcmp.ll  strcpy.ll  strlen.ll
Parser/: Parser.cpp  Parser.hpp  Parser.ipp
Postfix/: Main.cpp  PostfixVisitor.cpp  PostfixVisitor.hpp
Postfix/lib/: PostfixVisitor.cpp  PostfixVisitor.hpp
SExpr/: Main.cpp  SExprVisitor.cpp  SExprVisitor.hpp
SExpr/lib/: SExprVisitor.cpp  SExprVisitor.hpp
Test/: EvalTest.cpp  EvalTest.hpp  PostfixTest.cpp  SExprTest.cpp  TestCore.hpp  TestCore.ipp
